# AutopartsLMS

./: .dockerignore  .env.example  .env.production.example  .firebaserc  .gitignore  README.md  cloudbuild.yaml  firebase.json  package-lock.json  package.json  render.yaml
apps/api/: pyproject.toml
apps/api/app/: main.py
apps/api/app/api/v1/: router.py
apps/api/app/api/v1/endpoints/: analytics.py  audit.py  auth.py  centers.py  comms.py  ingest.py  integrations.py  leads.py  notifications.py  routing.py  system.py  trash.py  users.py
apps/api/app/core/: audit.py  config.py  deps.py  encryption.py  middleware.py  permissions.py  redis_client.py  security.py
apps/api/app/db/: prisma_client.py  prisma_json.py
apps/api/app/integrations/: base.py
apps/api/app/integrations/email/: base.py  providers.py  service.py
apps/api/app/integrations/email/parser/: pipeline.py
apps/api/app/integrations/resend/: email.py
apps/api/app/integrations/twilio/: sms.py
apps/api/app/modules/analytics/: service.py
apps/api/app/modules/auth/: oauth_service.py  session.py
apps/api/app/modules/comms/: service.py
apps/api/app/modules/ingestion/: auto_parts_form.py  csv_import.py  routing.py  service.py
apps/api/app/modules/leads/: activity.py  dedup.py  service.py
apps/api/app/modules/notifications/: service.py
apps/api/app/modules/trash/: service.py
apps/api/app/schemas/: common.py  serializers.py
apps/api/app/websockets/: notifications.py
docker/: Dockerfile.api  Dockerfile.web  docker-compose.yml  start-api.sh
docs/: ARCHITECTURE.md  DEPLOYMENT.md  OAUTH.md
(+68 files in other folders)
